--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
             <p><li>Secured $9M in B2B contract manufacturing LOIs from real, frozen foods, pet foods, and plant-based foods manufacturers.</li></p>
             <p><li>Coordinated different partnerships with NCAA universities throughout the states such as Stanford, UC Berkeley, and others.</li></p>
             <p><li>Structured D2C initiatives utilizing affiliate marketing and CRM tools such as Zendesk to maximize customer acquisition.</li></p>
-            <a href="https://www.linkedin.com/company/96938567" target="_blank">View More Info</a>
+            <a href="https://www.linkedin.com/company/96938567" target="_blank">View More Info</a> |
             <a href="https://www.achim.co.kr/about-us" target="_blank">View Our Partner</a>
         </section>
 
