--- a/projects.html
+++ b/projects.html
@@ -26,9 +26,8 @@
     <main>
         <h1>Current & Past</h1>
         <!-- Project 1 -->
-        <!--
         <section class="project">
-            <h2>Stealth Startup</h2>
+            <h2>Stealth Startup: Decentralized, Community-Driven Commerce Platform</h2>
             <img src="stealth-startup-logo.png" alt="Stealth Startup Logo" class="small-img">
             <p>Coming soon.</p>
         </section>
@@ -43,7 +42,6 @@
             <p><i class="fas fa-check"></i> Student Mentorship: Throughout my burgeoning professional career, I've had the honor of mentoring students, including speaking at university boot camps in Berkeley and Hong Kong. Each interaction not only allows me to impart knowledge but also provides me with deeper self-insight. I firmly believe in the power of helping others when we have the means to do so, recognizing that what may be challenging for one person could be straightforward for another. This philosophy drives my commitment to mentorship and community support.</p>
             <p><i class="fas fa-check"></i> Korea Network Forum: While serving as an ASUC Senator at Cal, I noticed a concerning gap in professional opportunities for the Korean student community. This issue stemmed from a combination of inadequate promotion by the school and a general lack of engagement from the students themselves. To address this, I organized a networking event that successfully connected Cal's talented students with major South Korean conglomerates, including Samsung, Hyundai, SK, LG, and others. This initiative aimed to bridge the gap and open new doors for our bright students. This career fair has continued every semester ever since.</p>
         </section>
-        -->
 
         <!-- Project 2 -->
         <section class="project">
