--- a/projects.html
+++ b/projects.html
@@ -25,12 +25,13 @@
 
     <main>
         <h1>Current & Past</h1>
-        <!-- Project 1 -->
+        <!-- Project 1
         <section class="project">
             <h2>Stealth Startup: Decentralized, Community-Driven Commerce Platform</h2>
             <img src="stealth-startup-logo.png" alt="Stealth Startup Logo" class="small-img">
             <p>Coming soon.</p>
         </section>
+        -->
 
         <section class="project">
             <h2>Side Projects</h2>
